force-app/main/default/objects/Coverage_Officer__c/Coverage_Officer__c.object-meta.xml
<CustomObject>
    <label>Coverage Officer</label>
    <nameField>
        <displayFormat>CIC-{00000}</displayFormat>
        <label>Coverage Officer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Officer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>