force-app/main/default/objects/Coverage_Officer__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Coverage_Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Officer Company</label>
    <type>Text</type>
</CustomField>