force-app/main/default/objects/Coverage_Officer__c/fields/Coverage_Contact__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Coverage_Internal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>