force-app/main/default/objects/Coverage_Officer__c/fields/Coverage_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Team Member</label>
    <referenceTo>Coverage_Team__c</referenceTo>
    <relationshipName>Coverage_Internal_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>