force-app/main/default/objects/Coverage_Officer__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <formula>TEXT( Coverage_Contact__r.Industry_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>