force-app/main/default/objects/Coverage_Officer__c/fields/Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>Operating_Region__c</fullName>
    <label>Operating Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>