force-app/main/default/objects/Coverage_Officer__c/validationRules/Coverage_Internal_Contact_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Coverage_Internal_Contact_Account</fullName>
    <active>false</active>
    <errorConditionFormula>Company__c &lt;&gt; Coverage_Team_Member__r.Company__r.Id</errorConditionFormula>
    <errorDisplayField>Coverage_Contact__c</errorDisplayField>
    <errorMessage>Coverage Contact must be at the Covered Account</errorMessage>
</ValidationRule>